--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,14 @@ body {
   --nav-load-time: 300ms;
   --nav-link-load-time: 500ms;
   --article-load-delay: calc(var(--nav-load-time) + var(--nav-link-load-time));
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+header {
+  width: 100vw;
 }
 
 nav {
@@ -50,7 +58,9 @@ nav a {
 }
 
 main {
-  padding: 40px 630px;
+  min-width: 300px;
+  max-width: 500px;
+  padding: 40px
 }
 
 h1 {
